# hse_parallel

./: README.md
task1.1/: CMakeLists.txt  README.md  main.cpp
task1.2/: CMakeLists.txt  README.md  main.cpp  main_opt.cpp
